# ResumeBlog-ES

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  render.yaml  style.css
.github/workflows/: sync-to-hf.yml
.streamlit/: config.toml
pages/: CV_de.py  CV_eng.py  Intro.py  contact_de.py  contact_eng.py
utils/: __init__.py  context_dictionaries.py  context_strings.py  education.py  print_header.py  print_markdown.py  skills.py  themes.py  title_caption_links.py  work_experience.py
