[project]
name = "resumeblog"
version = "2.0.0"
description = "Bilingual (EN/DE) resume website template — a Streamlit multipage app, Docker-deployable to Hugging Face Spaces"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.46",
    "logfire>=3",
]
