[project]
name = "resumeblog-es"
version = "1.0.0"
description = "Eleni Syngelaki, Dr.rer.nat. — bilingual (EN/DE) CV and blog as a Streamlit multipage app, deployed to Hugging Face Spaces"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.46",
    "logfire>=3",
]
